--- a/assets/css/PT Sans Caption.css
+++ b/assets/css/PT Sans Caption.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'PT Sans Caption';
-	src: url(/assets/fonts/0FlMVP6Hrxmt7-fsUFhlFXNIlpcadw_xYS2ix0YK.woff2) format('woff2');
+	src: url(../../assets/fonts/0FlMVP6Hrxmt7-fsUFhlFXNIlpcadw_xYS2ix0YK.woff2) format('woff2');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
@@ -9,7 +9,7 @@
 
 @font-face {
 	font-family: 'PT Sans Caption';
-	src: url(/assets/fonts/0FlMVP6Hrxmt7-fsUFhlFXNIlpcafg_xYS2ix0YK.woff2) format('woff2');
+	src: url(../../assets/fonts/0FlMVP6Hrxmt7-fsUFhlFXNIlpcafg_xYS2ix0YK.woff2) format('woff2');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
@@ -18,7 +18,7 @@
 
 @font-face {
 	font-family: 'PT Sans Caption';
-	src: url(/assets/fonts/0FlMVP6Hrxmt7-fsUFhlFXNIlpcadA_xYS2ix0YK.woff2) format('woff2');
+	src: url(../../assets/fonts/0FlMVP6Hrxmt7-fsUFhlFXNIlpcadA_xYS2ix0YK.woff2) format('woff2');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
@@ -27,7 +27,7 @@
 
 @font-face {
 	font-family: 'PT Sans Caption';
-	src: url(/assets/fonts/0FlMVP6Hrxmt7-fsUFhlFXNIlpcaeg_xYS2ixw.woff2) format('woff2');
+	src: url(../../assets/fonts/0FlMVP6Hrxmt7-fsUFhlFXNIlpcaeg_xYS2ixw.woff2) format('woff2');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
