--- a/assets/css/PT Sans.css
+++ b/assets/css/PT Sans.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'PT Sans';
-	src: url(/assets/fonts/jizaRExUiTo99u79D0-ExcOPIDUg-g.woff2) format('woff2');
+	src: url(../../assets/fonts/jizaRExUiTo99u79D0-ExcOPIDUg-g.woff2) format('woff2');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
@@ -9,7 +9,7 @@
 
 @font-face {
 	font-family: 'PT Sans';
-	src: url(/assets/fonts/jizaRExUiTo99u79D0aExcOPIDUg-g.woff2) format('woff2');
+	src: url(../../assets/fonts/jizaRExUiTo99u79D0aExcOPIDUg-g.woff2) format('woff2');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
@@ -18,7 +18,7 @@
 
 @font-face {
 	font-family: 'PT Sans';
-	src: url(/assets/fonts/jizaRExUiTo99u79D0yExcOPIDUg-g.woff2) format('woff2');
+	src: url(../../assets/fonts/jizaRExUiTo99u79D0yExcOPIDUg-g.woff2) format('woff2');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
@@ -27,7 +27,7 @@
 
 @font-face {
 	font-family: 'PT Sans';
-	src: url(/assets/fonts/jizaRExUiTo99u79D0KExcOPIDU.woff2) format('woff2');
+	src: url(../../assets/fonts/jizaRExUiTo99u79D0KExcOPIDU.woff2) format('woff2');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
