--- a/assets/css/main.compiled.css
+++ b/assets/css/main.compiled.css
@@ -48,6 +48,12 @@ body {
   margin: 0 auto;
 }
 
+.img-wh {
+  width: 133px;
+  height: 177px;
+  margin: 0 auto;
+}
+
 .cat-img {
   width: 168px;
   height: 224px;
