--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -58,6 +58,11 @@ body {
 .cat-img-wrapper {
   margin: 0 auto;
 }
+.img-wh {
+    width: 133px;
+    height: 177px;
+    margin:0 auto;
+}
 
 .cat-img {
   width: 168px;
